Update after gnulib changed.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC_COMMON_DEPENDENCIES): Add
windows-rwlock.
* gettext-runtime/intl/windows-rwlock.h: New file, from gnulib.
* gettext-runtime/intl/windows-rwlock.c: New file, from gnulib.
* gettext-runtime/intl/windows-initguard.h: New file, from gnulib.
* gettext-runtime/intl/windows-spinlock.h: Remove file.
* gettext-runtime/intl/lock.h: Update from gnulib.
* gettext-runtime/intl/lock.c: Likewise.
* gettext-runtime/intl/verify.h: Likewise.
* gettext-runtime/intl/windows-mutex.h: Likewise.
* gettext-runtime/intl/windows-recmutex.h: Likewise.
* gettext-runtime/intl/Makefile.am (EXTRA_DIST): Add windows-rwlock.h,
windows-initguard.h. Remove windows-spinlock.h.
(LIBINTLSOURCES): Conditionally add windows-rwlock.c.
(windows-rwlock.lo): New rule.
(*.lo): Update dependencies.
* Makefile.am (distcheck-hook): Check that gettext-runtime/intl/windows-*.[hc]
are up-to-date.
* gnulib-local/lib/libxml/threads.c: Test HAVE_PTHREAD_H, HAVE_WIN32_THREADS,
HAVE_BEOS_THREADS only if LIBXML_THREAD_ENABLED is defined; otherwise use a
fallback suitable for single-threaded applications.

--- a/.gitignore
+++ b/.gitignore
@@ -239,13 +239,15 @@
 /gettext-tools/libgettextpo/wctype-h.c
 /gettext-tools/libgettextpo/wctype.in.h
 /gettext-tools/libgettextpo/wcwidth.c
+/gettext-tools/libgettextpo/windows-initguard.h
 /gettext-tools/libgettextpo/windows-mutex.c
 /gettext-tools/libgettextpo/windows-mutex.h
 /gettext-tools/libgettextpo/windows-once.c
 /gettext-tools/libgettextpo/windows-once.h
 /gettext-tools/libgettextpo/windows-recmutex.c
 /gettext-tools/libgettextpo/windows-recmutex.h
-/gettext-tools/libgettextpo/windows-spinlock.h
+/gettext-tools/libgettextpo/windows-rwlock.c
+/gettext-tools/libgettextpo/windows-rwlock.h
 /gettext-tools/libgettextpo/windows-tls.c
 /gettext-tools/libgettextpo/windows-tls.h
 /gettext-tools/libgettextpo/xalloc-oversized.h
