libtextstyle: term-ostream: Add hyperlink support.
* libtextstyle/gnulib-local/lib/term-ostream.oo.h (struct term_ostream): Add
methods get_hyperlink_ref, get_hyperlink_id, set_hyperlink.
* libtextstyle/gnulib-local/lib/term-ostream.oo.c: Include <stdint.h>,
<sys/time.h>, get_ppid_of.h, get_progname_of.h, xgethostname.h.
(hyperlink_t): New type.
(free_hyperlink): New function.
(attributes_t): Add 'hyperlink' field.
(equal_attributes): Compare also the 'hyperlink' field.
(struct term_ostream): Add fields supports_hyperlink, restore_hyperlink,
hostname_hash, start_time, id_serial, hyperlinks_array, hyperlinks_count,
hyperlinks_allocated, active_attr_hyperlink.
(simplify_attributes): Deal with 'hyperlink' field.
(generate_hyperlink_id): New function.
(out_hyperlink_change): New function.
(out_attr_change): Set active_attr_hyperlink. Invoke out_hyperlink_change.
(restore, async_restore): Use stream->restore_hyperlink.
(async_set_attributes_from_default): Invoke out_hyperlink_change.
(output_buffer): At the end, free the unused hyperlink_t objects.
(term_ostream::free): Free the hyperlinks_array and its contents.
(term_ostream::get_hyperlink_ref, term_ostream::get_hyperlink_id,
term_ostream::set_hyperlink): New functions.
(get_terminal_emulator_progname, should_enable_hyperlinks): New functions.
(term_ostream_create): Set the fields supports_hyperlink, restore_hyperlink,
hostname_hash, start_time, id_serial, hyperlinks_array, hyperlinks_count,
hyperlinks_allocated.
* libtextstyle/gnulib-local/m4/term-ostream.m4 (gl_TERM_OSTREAM): Test for
getsid function.
* libtextstyle/gnulib-local/modules/term-ostream (Depends-on): Add gettimeofday,
get_ppid_of, get_progname_of, stdint, xgethostname.
* libtextstyle/lib/textstyle.h (term_ostream_get_hyperlink_ref,
term_ostream_get_hyperlink_id, term_ostream_set_hyperlink): New declarations.

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -58,9 +58,15 @@
 /lib/fsync.c
 /lib/full-write.c
 /lib/full-write.h
+/lib/get_ppid_of.c
+/lib/get_ppid_of.h
+/lib/get_progname_of.c
+/lib/get_progname_of.h
+/lib/gethostname.c
 /lib/getprogname.c
 /lib/getprogname.h
 /lib/gettext.h
+/lib/gettimeofday.c
 /lib/gl_array_list.c
 /lib/gl_array_list.h
 /lib/gl_list.c
@@ -92,6 +98,8 @@
 /lib/libcroco/
 /lib/libxml/
 /lib/limits.in.h
+/lib/localtime-buffer.c
+/lib/localtime-buffer.h
 /lib/log10.c
 /lib/malloc.c
 /lib/math.c
@@ -133,6 +141,9 @@
 /lib/sigprocmask.c
 /lib/size_max.h
 /lib/snprintf.c
+/lib/sockets.c
+/lib/sockets.h
+/lib/stdalign.in.h
 /lib/stdarg.in.h
 /lib/stdbool.in.h
 /lib/stddef.in.h
@@ -148,7 +159,11 @@
 /lib/styled-ostream.oo.c
 /lib/styled-ostream.oo.h
 /lib/sys-limits.h
+/lib/sys_socket.c
+/lib/sys_socket.in.h
+/lib/sys_time.in.h
 /lib/sys_types.in.h
+/lib/sys_uio.in.h
 /lib/term-ostream.oo.c
 /lib/term-ostream.oo.h
 /lib/term-style-control.c
@@ -156,6 +171,7 @@
 /lib/term-styled-ostream.oo.c
 /lib/term-styled-ostream.oo.h
 /lib/terminfo.h
+/lib/time.in.h
 /lib/tparm.c
 /lib/tputs.c
 /lib/unistd.c
@@ -169,12 +185,16 @@
 /lib/vasprintf.c
 /lib/verify.h
 /lib/vsnprintf.c
+/lib/w32sock.h
 /lib/warn-on-use.h
 /lib/wchar.in.h
 /lib/write.c
+/lib/xalloc-oversized.h
 /lib/xalloc.h
 /lib/xasprintf.c
 /lib/xconcat-filename.c
+/lib/xgethostname.c
+/lib/xgethostname.h
 /lib/xmalloc.c
 /lib/xsize.c
 /lib/xsize.h
@@ -444,6 +464,8 @@ core
 /lib/math.h-t
 /lib/signal.h
 /lib/signal.h-t
+/lib/stdalign.h
+/lib/stdalign.h-t
 /lib/stdarg.h
 /lib/stdarg.h-t
 /lib/stdbool.h
@@ -458,9 +480,17 @@ core
 /lib/stdlib.h-t
 /lib/string.h
 /lib/string.h-t
+/lib/sys/socket.h
+/lib/sys/socket.h-t
+/lib/sys/time.h
+/lib/sys/time.h-t
 /lib/sys/types.h
 /lib/sys/types.h-t
+/lib/sys/uio.h
+/lib/sys/uio.h-t
 /lib/textstyle/stdbool.h-t
+/lib/time.h
+/lib/time.h-t
 /lib/unistd.h
 /lib/unistd.h-t
 /lib/unistr.h
