libtextstyle: Fix VPATH build (regression from yesterday).
* libtextstyle/lib/Makefile.am (AM_CPPFLAGS): Search also the glib subdirectory
of the build dir.

--- a/libtextstyle/lib/Makefile.am
+++ b/libtextstyle/lib/Makefile.am
@@ -39,6 +39,7 @@ noinst_HEADERS = notinline.h
 AM_CPPFLAGS = \
   -I. -I$(srcdir) \
   -I$(top_builddir) -I$(top_srcdir) \
+  -Iglib \
   -DIN_LIBTEXTSTYLE
 
 # Parameterization of the 'libxml' module:
