build: Install gettext.h with the LGPL license header, not with the GPL header.
Reported by Joachim Metz <joachim.metz@gmail.com>
in <https://lists.gnu.org/archive/html/bug-gettext/2012-09/msg00000.html>.

* gettext-tools/gnulib-lib/Makefile.am (gettextsrcdir, gettextsrc_DATA): Remove
variables.
* gnulib-local/Makefile.am (gettextsrcdir, gettextsrc_DATA): Define them here.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -178,4 +178,9 @@ modules/xalloc-die \
 modules/xerror \
 modules/xgetcwd
 
+# Extra files to be installed.
+
+gettextsrcdir = $(datadir)/gettext
+gettextsrc_DATA = lib/gettext.h
+
 maintainer-update-po:
